# AscendOne

./: .gitignore  README.md  launch.ps1  run-dev.bat  start-dev.ps1
app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: ErrorBoundary.tsx  LogoImage.tsx  MorningStartup.tsx  PinLock.tsx
app/src/components/layout/: BottomBar.tsx  GalaxyBackground.tsx  Layout.tsx  QuoteStrip.tsx  Sidebar.tsx  TopBar.tsx  WizardNav.tsx
app/src/components/ui/: ComingSoon.tsx
app/src/db/: database.ts
app/src/hooks/: useNotifications.ts
app/src/pages/: AffirmationsPage.tsx  CalendarPage.tsx  ChallengePage.tsx  Dashboard.tsx  GoalsPage.tsx  GratitudesPage.tsx  JournalPage.tsx  Onboarding.tsx  PointsPage.tsx  ProfilePage.tsx  RoadmapPage.tsx  SettingsPage.tsx  StatsPage.tsx  TasksPage.tsx  ToDoPage.tsx  VisionBoardPage.tsx
app/src/store/: appStore.ts  themeStore.ts
app/src/utils/: dateUtils.ts  holidays.ts  logger.ts
