[package]
name = "ascend-one"
version = "0.1.0"
description = "AscendOne - Law of Attraction Journal"
authors = ["AscendOne"]
edition = "2021"

[lib]
name = "ascendone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
